# libvlc-node-addon

./: .gitmodules  CMakeLists.txt  LICENSE  package.json
src/: addon.cpp
